2003-08-01  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm, README: Made it possible to define nested
	  composite options.

2003-07-21  Till Kamppeter <till.kamppeter@gmx.net>

	* README, configure.in, Makefile.in, foomatic-ppdload.in,
	  foomatic-ppdload.8.in: Removed the "foomatic-ppdload" tool as
	  generating XML data from PPD files is not needed any
	  more. "foomatic-rip" works also with manufacturer-supplied
	  PostScript PPDs.
	
	* foomatic-perl-data.c: Let URL of manufacturer PPD also appear
	  in printer/driver combo output.

2003-07-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c: Fixed output of printer language info.

2003-07-17  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Added "Folio" and "Env10" paper sizes to
	  paper size list.

2003-07-02  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c: Added stuff needed for a web form to enter
	  printer data.

2003-06-26  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, makeMan.in: Support for IRIX.

2003-06-25  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Remove "," and "+" from the "*NickName" and
	  "*ShortNickName" to make the PostScript drivers of Windows happy,
	  fix on auto-abbreviation of "*ShortNickName".

2003-05-09  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Lots of small corrections.

2003-04-30  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Updated link to Adobe's PostScript documentation.

2003-04-29  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.0. 
	  Tag name: "foomatic-db-engine-3_0_0".

	* README, USAGE, lib/Foomatic/DB.pm: Updated for version 3.0.0.

2003-04-27  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in: Stop if an error occurs when building the PPD package.

2003-04-25  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-replaceoldprinterids.in: Changed default pattern on the